Fix right-alignment of footer for old browsers (current Chrome etc.)
Chrome doesn't yet support 'right' for justify-content.

Also fix closing tag in footer.html

--- a/themes/chatbx-theme/assets/css/style.css
+++ b/themes/chatbx-theme/assets/css/style.css
@@ -347,7 +347,7 @@ html, body {
 	margin-right: auto;
 
 	display: flex;
-	justify-content: right;
+	justify-content: flex-end;
 }
 
 @media (max-width: 800px) {
